$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.348 2006/04/25 14:02:29 ph10 Exp $

Change log file for Exim from version 4.21
-------------------------------------------

Exim version 4.62
-----------------

TF/01 Fix the add_header change below (4.61 PH/55) which had a bug that (amongst
      other effects) broke the use of negated acl sub-conditions.

PH/01 ${readsocket now supports Internet domain sockets (modified John Jetmore
      patch).

PH/02 When tcp-wrappers is called from Exim, it returns only "deny" or "allow".
      "Deny" causes Exim to reject the incoming connection with a 554 error.
      Unfortunately, if there is a major crisis, such as a disk failure,
      tcp-wrappers gives "deny", whereas what one would like would be some
      kind of temporary error. A kludge has been added to help with this.
      Before calling hosts_ctl(), errno is set zero. If the result is "deny", a
      554 error is used if errno is still zero or contains ENOENT (which occurs
      if either of the /etc/hosts.{allow,deny} files is missing). Otherwise, a
      451 error is used.

PH/03 Add -lutil to the default FreeBSD LIBS setting.

PH/04 Change PH/19 for 4.61 was too wide. It should not be applied to host
      errors. Otherwise a message that provokes a temporary error (when other
      messages do not) can cause a whole host to time out.

PH/05 Batch deliveries by appendfile and pipe transports did not work when the
      addresses were routed directly to files or pipes from a redirect router.
      File deliveries just didn't batch; pipe deliveries might have suffered
      odd errors.

PH/06 A failure to get a lock for a hints database would erroneously always say
      "Failed to get write lock", even when it was really a read lock.

PH/07 The appendfile transport was creating MBX lock files with a fixed mode
      of 0600. This has been changed to use the value of the lockfile_mode
      option (which defaults to 0600).
