@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.348 2006/04/25 14:02:29 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.349 2006/04/27 08:53:24 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -49,6 +49,8 @@ PH/09 If maildir_quota_directory_regex was set to exclude (say) the .Trash
       was calculated. There was no check that a delivery was happening into an
       excluded directory. This bug has been fixed by ignoring all quota
       processing for deliveries into excluded directories.
+
+PH/10 Added the maildirfolder_create_regex option to appendfile.
 
 
 Exim version 4.61
